--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@solana/wallet-adapter-react-ui": "^0.9.34",
     "@solana/wallet-adapter-wallets": "^0.19.18",
     "@solana/web3.js": "^1.78.5",
-    "gamba-core-v2": "^0.1.7",
-    "gamba-react-ui-v2": "^0.2.0",
-    "gamba-react-v2": "^0.2.0",
+    "gamba-core-v2": "0.2.0",
+    "gamba-react-ui-v2": "0.3.0",
+    "gamba-react-v2": "1.0.0",
     "gsap": "^3.12.5",
     "html2canvas": "^1.4.1",
     "matter-js": "^0.19.0",
