--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # Web3 connection
-NEXT_PUBLIC_RPC_ENDPOINT="https://mainnet.helius-rpc.com/?api-key=a5da6914-88b4-4f38-8b27-6a16bf71892b"
+NEXT_PUBLIC_RPC_ENDPOINT="https://white-divine-dream.solana_mainnet.quiknode.pro/0a2dc4568b2173c13a442550efb674d22d88fd04"
 
 
